--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-STRING_CONEXAO = 
+STRING_CONEXAO = mongodb+srv://pedrohenriquesn90:gFEkQEBCyRxNGL16@cluster0.rjsba.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
